syntax = "proto3";

package dispatch;

option go_package = "github.com/emergency-material-system/backend/internal/common/genproto/dispatch";

service DispatchService {
    rpc ListDemands(ListDemandsRequest) returns (ListDemandsResponse);
    rpc CreateDemand(CreateDemandRequest) returns (CreateDemandResponse);
    rpc GetDemand(GetDemandRequest) returns (GetDemandResponse);
    rpc UpdateDemandStatus(UpdateDemandStatusRequest) returns (UpdateDemandStatusResponse);
    rpc CreateDispatchOrder(CreateDispatchOrderRequest) returns (CreateDispatchOrderResponse);
    rpc ListDispatchOrders(ListDispatchOrdersRequest) returns (ListDispatchOrdersResponse);
}

message DemandItem {
    int64 material_id = 1;
    int64 quantity = 2;
}

message Demand {
    int64 id = 1;
    string location = 2;
    string priority = 3;
    string status = 4;
    string description = 5;
    int64 created_at = 6;
    int64 updated_at = 7;
    repeated DemandItem items = 8;
}

message ListDemandsRequest {
    int32 page = 1;
    int32 page_size = 2;
    string status = 3;
}

message ListDemandsResponse {
    repeated Demand demands = 1;
    int32 total = 2;
}

message CreateDemandRequest {
    int64 material_id = 1;
    int64 quantity = 2;
    string priority = 3;
    string location = 4;
    string description = 5;
}

message CreateDemandResponse {
    int64 id = 1;
}

message GetDemandRequest {
    int64 id = 1;
}

message GetDemandResponse {
    Demand demand = 1;
}

message UpdateDemandStatusRequest {
    int64 id = 1;
    string status = 2;
}

message UpdateDemandStatusResponse {
    bool success = 1;
}

message CreateDispatchOrderRequest {
    int64 demand_id = 1;
    string warehouse_id = 2;
}

message CreateDispatchOrderResponse {
    int64 id = 1;
    string status = 2;
}

message ListDispatchOrdersRequest {
    int32 page = 1;
    int32 page_size = 2;
}

message ListDispatchOrdersResponse {
    // Define appropriately if needed
}
